# regexNFA

./: .gitignore  CMakeLists.txt
include/: regex.hpp  regexfa.hpp
src/: CMakeLists.txt  regexfa.cpp
src/checks/: CMakeLists.txt  lang_check1.cpp  lang_check2.cpp  lang_test1.cpp  lang_test2.cpp  lang_test3.cpp  match_check1.cpp  match_check2a.cpp  match_check2b.cpp  match_check3a.cpp  match_check3b.cpp  match_check4a.cpp  match_check4b.cpp
src/checks/scripts/: lang2lit.sh
tests/engine/: CMakeLists.txt  lang_check1.cpp  lang_check2.cpp  lang_test1.cpp  lang_test2.cpp  lang_test3.cpp  match_check1.cpp  match_check2a.cpp  match_check2b.cpp  match_check3a.cpp  match_check3b.cpp  match_check4a.cpp  match_check4b.cpp
